[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-extractor-enhancer"
version = "0.1.0"
description = "Extract, isolate, and enhance background music from video files."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Audio Extractor Team" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

